cabal-version: 3.0
name:          primer-service
version:       0.7.2.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2023 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      A web service for the Primer API.
category:      Web

library
  exposed-modules:
    Primer.Client
    Primer.Finite
    Primer.OpenAPI
    Primer.Pagination
    Primer.Servant.API
    Primer.Servant.OpenAPI
    Primer.Servant.Types
    Primer.Server

  hs-source-dirs:     src
  other-modules:      Servant.OpenApi.OperationId
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

  build-depends:
    , aeson                      >=2.0      && <2.3
    , base                       >=4.12     && <4.20
    , containers                 >=0.6.0.1  && <0.8
    , deriving-aeson             >=0.2      && <0.3.0
    , exceptions                 >=0.10.4   && <0.11.0
    , extra                      >=1.7.10   && <1.8.0
    , http-client                ^>=0.7.13
    , http-media                 >=0.8      && <0.9.0
    , http-types                 ^>=0.12.3
    , insert-ordered-containers  ^>=0.2.5.1
    , logging-effect             ^>=1.4
    , mtl                        >=2.2.2    && <2.4.0
    , openapi3                   ^>=3.2.4
    , optics                     >=0.4      && <0.5.0
    , primer                     ^>=0.7.2
    , primer-api                 ^>=0.7.2
    , refined                    ^>=0.8
    , servant                    >=0.18     && <0.20.2
    , servant-client             >=0.18     && <0.20.2
    , servant-client-core        >=0.18     && <0.20.2
    , servant-openapi3           ^>=2.0.1.2
    , servant-server             >=0.18     && <0.20.2
    , stm                        ^>=2.5
    , stm-containers             >=1.1      && <1.3.0
    , streaming-commons          ^>=0.2.2.4
    , text                       >=2.0      && <2.2
    , time                       >=1.11     && <1.15
    , transformers               >=0.5.6.2  && <0.7.0
    , uuid-types                 ^>=1.0.5.1
    , wai                        ^>=3.2
    , wai-app-static             ^>=3.1
    , wai-cors                   ^>=0.2.7
    , wai-middleware-prometheus  ^>=1.0.0.1
    , warp                       >=3.3      && <3.5

executable primer-service
  main-is:            Main.hs
  hs-source-dirs:     exe-server
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths -threaded
    -rtsopts -with-rtsopts=-N

  build-depends:
    , async                   ^>=2.2.4
    , base
    , directory               ^>=1.3
    , exceptions
    , logging-effect          ^>=1.4
    , optparse-applicative    ^>=0.18
    , primer
    , primer-api
    , primer-selda            ^>=0.7.2
    , primer-service
    , prometheus-client       ^>=1.1.1
    , prometheus-metrics-ghc  ^>=1.0.1.2
    , stm
    , stm-containers
    , text
    , time
    , utf8-string             ^>=1.0

executable primer-client
  main-is:            Main.hs
  hs-source-dirs:     exe-client
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths -threaded
    -rtsopts -with-rtsopts=-N

  build-depends:
    , base
    , bytestring            >=0.10.8.2 && <0.13
    , directory
    , exceptions
    , http-client-tls       ^>=0.3.6.1
    , optparse-applicative
    , primer
    , primer-service
    , servant-client
    , text
    , utf8-string

executable primer-openapi
  main-is:            Main.hs
  hs-source-dirs:     exe-openapi
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths -threaded
    -rtsopts -with-rtsopts=-N

  build-depends:
    , aeson-pretty    ^>=0.8
    , base
    , bytestring
    , primer-service

test-suite primer-service-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test
  other-modules:
    Tests.OpenAPI
    Tests.Pagination

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths -threaded
    -rtsopts -with-rtsopts=-N

  build-depends:
    , aeson
    , aeson-pretty
    , base
    , bytestring
    , hedgehog                           ^>=1.4
    , hedgehog-quickcheck                ^>=0.1.1
    , hspec                              ^>=2.11
    , openapi3
    , pretty-simple                      ^>=4.1
    , primer
    , primer-api
    , primer-api:primer-api-hedgehog
    , primer-selda
    , primer-selda:primer-selda-testlib
    , primer-service
    , primer:primer-hedgehog
    , primer:primer-testlib
    , QuickCheck                         ^>=2.14.2
    , servant-openapi3
    , tasty                              ^>=1.5
    , tasty-discover                     ^>=5.0
    , tasty-golden                       ^>=2.3.5
    , tasty-hedgehog                     ^>=1.4.0.2
    , tasty-hspec                        ^>=1.2.0.1
    , tasty-hunit                        ^>=0.10.0
    , text
    , time
    , uuid-types

--TODO This currently breaks with haskell.nix, so we manually add it to `flake.nix` instead.
-- See: https://github.com/input-output-hk/haskell.nix/issues/839
-- build-tool-depends: tasty-discover:tasty-discover ^>=5.0
