cabal-version: 3.0
name:          primer
version:       0.7.2.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2021 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      A framework for structured editing.
category:      Editor

library
  exposed-modules:
    Control.Monad.Fresh
    Foreword
    Primer.Action
    Primer.Action.Available
    Primer.Action.Priorities
    Primer.API
    Primer.App
    Primer.App.Base
    Primer.Builtins
    Primer.Builtins.DSL
    Primer.Core
    Primer.Core.DSL
    Primer.Core.Transform
    Primer.Core.Utils
    Primer.Database
    Primer.Def
    Primer.Def.Utils
    Primer.Eval
    Primer.EvalFull
    Primer.Examples
    Primer.JSON
    Primer.Log
    Primer.Module
    Primer.Name
    Primer.Name.Fresh
    Primer.Prelude
    Primer.Prelude.Integer
    Primer.Prelude.Logic
    Primer.Prelude.Polymorphism
    Primer.Prelude.Utils
    Primer.Pretty
    Primer.Primitives
    Primer.Primitives.DSL
    Primer.Questions
    Primer.Refine
    Primer.Subst
    Primer.Typecheck
    Primer.TypeDef
    Primer.Unification
    Primer.Zipper
    Primer.ZipperCxt

  hs-source-dirs:     src
  other-modules:
    Control.Monad.NestedError
    Primer.Action.Actions
    Primer.Action.Errors
    Primer.Action.Movement
    Primer.Action.ProgAction
    Primer.Action.ProgError
    Primer.API.NodeFlavor
    Primer.Core.DSL.Meta
    Primer.Core.DSL.Type
    Primer.Core.Fresh
    Primer.Core.Meta
    Primer.Core.Type
    Primer.Core.Type.Utils
    Primer.Eval.Ann
    Primer.Eval.Beta
    Primer.Eval.Bind
    Primer.Eval.Case
    Primer.Eval.Detail
    Primer.Eval.EvalError
    Primer.Eval.Inline
    Primer.Eval.Let
    Primer.Eval.NormalOrder
    Primer.Eval.Prim
    Primer.Eval.Redex
    Primer.Primitives.PrimDef
    Primer.Typecheck.Cxt
    Primer.Typecheck.Kindcheck
    Primer.Typecheck.KindError
    Primer.Typecheck.SmartHoles
    Primer.Typecheck.TypeError
    Primer.Typecheck.Utils
    Primer.Zipper.Type

  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths

  build-depends:
    , aeson                        >=2.0      && <2.2
    , base                         >=4.12     && <4.17.0
    , bytestring                   >=0.10.8.2 && <0.12.0
    , containers                   >=0.6.0.1  && <0.7.0
    , deriving-aeson               >=0.2      && <0.3.0
    , exceptions                   >=0.10.4   && <0.11.0
    , extra                        >=1.7.10   && <1.8.0
    , generic-optics               >=2.0      && <2.3.0
    , list-t                       >=1.0      && <1.1.0
    , logging-effect               ^>=1.3.13
    , megaparsec                   >=8.0.0    && <9.3.0
    , mmorph                       ^>=1.2.0
    , mtl                          >=2.2.2    && <2.4.0
    , optics                       >=0.4      && <0.5.0
    , prettyprinter                >=1.7.1    && <1.8.0
    , prettyprinter-ansi-terminal  >=1.1.3    && <1.2.0
    , protolude                    >=0.3.1    && <0.4.0
    , recursion-schemes            >=5.1.3    && <5.3.0
    , semigroups                   >=0.20     && <0.21.0
    , stm                          >=2.5      && <2.6.0
    , stm-containers               >=1.1      && <1.3.0
    , text                         ^>=2.0
    , time                         ^>=1.11
    , transformers                 >=0.5.6.2  && <0.7.0
    , uniplate                     >=1.6      && <1.7.0
    , uuid                         ^>=1.3.15

library primer-hedgehog
  visibility:         public
  exposed-modules:
    Primer.Gen.API
    Primer.Gen.App
    Primer.Gen.Core.Raw
    Primer.Gen.Core.Typed
    Tasty

  other-modules:
  hs-source-dirs:     gen
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths

  build-depends:
    , base
    , containers
    , hedgehog        ^>=1.1.1
    , mmorph          ^>=1.2.0
    , mtl
    , primer
    , primer-testlib
    , tasty-discover  ^>=4.2.4
    , tasty-hedgehog  ^>=1.2.0

library primer-testlib
  visibility:         public
  exposed-modules:
    Primer.Test.App
    Primer.Test.Expected
    Primer.Test.TestM
    Primer.Test.Util

  other-modules:
  hs-source-dirs:     testlib
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths

  build-depends:
    , base
    , containers
    , exceptions
    , hedgehog
    , logging-effect
    , optics
    , primer
    , stm
    , stm-containers
    , tasty-hunit     ^>=0.10.0

test-suite primer-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test
  other-modules:
    Tests.Action
    Tests.Action.Available
    Tests.Action.Capture
    Tests.Action.Prog
    Tests.AlphaEquality
    Tests.API
    Tests.App
    Tests.Database
    Tests.Eval
    Tests.Eval.Utils
    Tests.EvalFull
    Tests.Examples
    Tests.FreeVars
    Tests.Gen.App
    Tests.Gen.Core.Typed
    Tests.Module
    Tests.NullDb
    Tests.Prelude.Integer
    Tests.Prelude.Logic
    Tests.Prelude.Polymorphism
    Tests.Prelude.TypeCheck
    Tests.Prelude.Utils
    Tests.Pretty
    Tests.Primitives
    Tests.Prog
    Tests.Questions
    Tests.Refine
    Tests.Serialization
    Tests.Subst
    Tests.Transform
    Tests.Typecheck
    Tests.Unification
    Tests.Utils
    Tests.Zipper
    Tests.Zipper.BindersAbove

  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedLists
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -threaded -rtsopts -with-rtsopts=-N

  if impl(ghcjs)
    buildable: False

  else
    build-depends:
      , aeson
      , aeson-pretty                 ^>=0.8.9
      , async                        ^>=2.2.4
      , base
      , bytestring
      , containers
      , exceptions
      , extra
      , filepath
      , generic-optics
      , hedgehog
      , hedgehog-classes             ^>=0.2.5.3
      , hspec                        ^>=2.9.4
      , hspec-megaparsec             ^>=2.2.0
      , logging-effect
      , mmorph
      , mtl
      , optics
      , pretty-simple                ^>=4.0.0
      , prettyprinter
      , prettyprinter-ansi-terminal
      , primer
      , primer-hedgehog
      , primer-testlib
      , protolude
      , stm
      , stm-containers
      , tasty                        ^>=1.4.2.1
      , tasty-discover
      , tasty-golden                 ^>=2.3.5
      , tasty-hedgehog
      , tasty-hunit
      , text
      , time
      , transformers
      , uniplate
      , uuid

--TODO This currently breaks with haskell.nix, so we manually add it to `flake.nix` instead.
-- See: https://github.com/input-output-hk/haskell.nix/issues/839
-- build-tool-depends: tasty-discover:tasty-discover ^>=4.2.4
