cabal-version: 3.0
name:          primer
version:       0.7.2.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2023 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      A framework for structured editing.
category:      Editor

library
  exposed-modules:
    Control.Monad.Fresh
    Foreword
    Primer.Action
    Primer.Action.Available
    Primer.Action.Priorities
    Primer.Action.ProgError
    Primer.App
    Primer.App.Base
    Primer.App.Utils
    Primer.Builtins
    Primer.Builtins.DSL
    Primer.Core
    Primer.Core.DSL
    Primer.Core.Meta
    Primer.Core.Transform
    Primer.Core.Utils
    Primer.Database
    Primer.Def
    Primer.Def.Utils
    Primer.Eval
    Primer.Eval.Redex
    Primer.EvalFullInterp
    Primer.EvalFullStep
    Primer.Examples
    Primer.JSON
    Primer.Log
    Primer.Module
    Primer.Name
    Primer.Name.Fresh
    Primer.Prelude
    Primer.Prelude.Integer
    Primer.Prelude.Logic
    Primer.Prelude.Polymorphism
    Primer.Prelude.Utils
    Primer.Pretty
    Primer.Primitives
    Primer.Primitives.DSL
    Primer.Questions
    Primer.Refine
    Primer.Subst
    Primer.Typecheck
    Primer.TypeDef
    Primer.Unification
    Primer.UUIDv4
    Primer.Zipper
    Primer.ZipperCxt

  hs-source-dirs:     src
  other-modules:
    Control.Monad.NestedError
    Primer.Action.Actions
    Primer.Action.Errors
    Primer.Action.Movement
    Primer.Action.ProgAction
    Primer.Core.DSL.Meta
    Primer.Core.DSL.Type
    Primer.Core.Fresh
    Primer.Core.Type
    Primer.Core.Type.Utils
    Primer.Eval.Ann
    Primer.Eval.Beta
    Primer.Eval.Bind
    Primer.Eval.Case
    Primer.Eval.Detail
    Primer.Eval.EvalError
    Primer.Eval.Inline
    Primer.Eval.Let
    Primer.Eval.NormalOrder
    Primer.Eval.Prim
    Primer.Eval.Push
    Primer.Primitives.PrimDef
    Primer.Typecheck.Cxt
    Primer.Typecheck.Kindcheck
    Primer.Typecheck.KindError
    Primer.Typecheck.SmartHoles
    Primer.Typecheck.TypeError
    Primer.Typecheck.Utils
    Primer.Zipper.Nested
    Primer.Zipper.Type

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

  build-depends:
    , aeson                        >=2.0      && <2.3
    , assoc                        ^>=1.1
    , base                         >=4.12     && <4.20
    , base64-bytestring            ^>=1.2.1
    , containers                   >=0.6.0.1  && <0.7.0
    , deriving-aeson               >=0.2      && <0.3.0
    , exceptions                   >=0.10.4   && <0.11.0
    , extra                        >=1.7.10   && <1.8.0
    , generic-optics               >=2.0      && <2.3.0
    , list-t                       >=1.0      && <1.1.0
    , logging-effect               ^>=1.4
    , mmorph                       ^>=1.2.0
    , mtl                          >=2.2.2    && <2.4.0
    , optics                       >=0.4      && <0.5.0
    , prettyprinter                >=1.7.1    && <1.8.0
    , prettyprinter-ansi-terminal  >=1.1.3    && <1.2.0
    , protolude                    >=0.3.1    && <0.4.0
    , random                       ^>=1.2.1.1
    , stm                          >=2.5      && <2.6.0
    , stm-containers               >=1.1      && <1.3.0
    , text                         >=2.0      && <2.1
    , time                         >=1.11     && <1.13
    , transformers                 >=0.5.6.2  && <0.7.0
    , uniplate                     >=1.6      && <1.7.0
    , uuid-types                   ^>=1.0.5.1

library primer-hedgehog
  visibility:         public
  exposed-modules:
    Primer.Gen.App
    Primer.Gen.Core.Raw
    Primer.Gen.Core.Typed
    Tasty

  other-modules:
  hs-source-dirs:     gen
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

  build-depends:
    , base
    , containers
    , extra
    , hedgehog        ^>=1.4
    , mmorph          ^>=1.2.0
    , mtl
    , primer
    , primer-testlib
    , tasty-discover  ^>=5.0
    , tasty-hedgehog  ^>=1.4.0.2

library primer-testlib
  visibility:         public
  exposed-modules:
    Primer.Test.App
    Primer.Test.Expected
    Primer.Test.TestM
    Primer.Test.Util

  other-modules:
  hs-source-dirs:     testlib
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    NoImplicitPrelude
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

  build-depends:
    , base
    , containers
    , exceptions
    , hedgehog
    , logging-effect
    , optics
    , primer
    , tasty-hunit     ^>=0.10.0

test-suite primer-test
  hs-source-dirs:     test
  other-modules:
    Tests.Action
    Tests.Action.Available
    Tests.Action.Capture
    Tests.Action.Prog
    Tests.AlphaEquality
    Tests.App
    Tests.Database
    Tests.Eval
    Tests.Eval.Utils
    Tests.EvalFullInterp
    Tests.EvalFullStep
    Tests.Examples
    Tests.FreeVars
    Tests.Gen.App
    Tests.Gen.Core.Typed
    Tests.Module
    Tests.NullDb
    Tests.Prelude.Integer
    Tests.Prelude.Logic
    Tests.Prelude.Polymorphism
    Tests.Prelude.TypeCheck
    Tests.Prelude.Utils
    Tests.Pretty
    Tests.Primitives
    Tests.Prog
    Tests.Questions
    Tests.Refine
    Tests.Serialization
    Tests.Shadowing
    Tests.Subst
    Tests.Transform
    Tests.Typecheck
    Tests.Undo
    Tests.Unification
    Tests.Utils
    Tests.Zipper
    Tests.Zipper.BindersAbove

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    NoImplicitPrelude
    OverloadedLists
    OverloadedStrings

  if arch(wasm32)
    type:        exitcode-stdio-1.0
    main-is:     TestsWasm32.hs
    ghc-options:
      -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wcompat -Widentities -Wredundant-constraints
      -Wmissing-deriving-strategies -fhide-source-paths

  else
    type:        exitcode-stdio-1.0
    main-is:     Test.hs
    ghc-options:
      -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wcompat -Widentities -Wredundant-constraints
      -Wmissing-deriving-strategies -fhide-source-paths -threaded
      -rtsopts -with-rtsopts=-N

  build-depends:
    , aeson
    , aeson-pretty                 ^>=0.8.9
    , base
    , bytestring
    , containers
    , extra
    , filepath
    , hedgehog
    , hedgehog-classes             ^>=0.2.5.4
    , logging-effect
    , mtl
    , optics
    , pretty-simple                ^>=4.1
    , prettyprinter
    , prettyprinter-ansi-terminal
    , primer
    , primer-hedgehog
    , primer-testlib
    , protolude
    , tasty                        ^>=1.5
    , tasty-discover
    , tasty-golden                 ^>=2.3.5
    , tasty-hedgehog
    , tasty-hunit
    , text
    , transformers
    , uniplate
    , uuid-types

--TODO This currently breaks with haskell.nix, so we manually add it to `flake.nix` instead.
-- See: https://github.com/input-output-hk/haskell.nix/issues/839
-- build-tool-depends: tasty-discover:tasty-discover ^>=5.0
